# ControlBlockService2

./: .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  LICENSE.txt  README.md  install.sh  test_gpiod_version.cpp  uninstall.sh  workspace.code-workspace
.github/: copilot-instructions.md
doc/: CMakeLists.txt
scripts/: Makefile  controlblock-start.sh  controlblock.service  controlblockservice  insertLine.sh  test_bookworm_build.sh  travis-ci.sh
src/controlblock/: ArcadeGamepad.cpp  ArcadeGamepad.h  ControlBlock.cpp  ControlBlock.h  ControlBlockConfiguration.cpp  ControlBlockConfiguration.h  DigitalIn.cpp  DigitalIn.h  DigitalOut.cpp  DigitalOut.h  HALFactory.cpp  HALFactory.h  InputDevice.h  MAMEGamepad.cpp  MAMEGamepad.h  Makefile  NONEGamepad.h  PowerSwitch.cpp  PowerSwitch.h  SNESGamepad.cpp  SNESGamepad.h  SingleConfiguration.cpp  SingleConfiguration.h  UInputDevice.cpp  UInputDevice.h  UInputGamepadArcade.cpp  UInputGamepadArcade.h  UInputGamepadSNES.cpp  UInputGamepadSNES.h  UInputKeyboard.cpp  UInputKeyboard.h  main.cpp  mcp23s17pi.cpp  mcp23s17pi.h  uinputcpp.h
src/controlblock/app/: CMakeLists.txt  ControlBlock.cpp  ControlBlock.h  Logger.cpp  Logger.h  PowerSwitch.cpp  PowerSwitch.h
src/controlblock/config/: CMakeLists.txt  ControlBlockConfiguration.cpp  ControlBlockConfiguration.h  IControlBlockConfiguration.h  ISingleConfiguration.h  SingleConfiguration.cpp  SingleConfiguration.h
src/controlblock/gamepads/: ArcadeGamepad.cpp  ArcadeGamepad.h  CMakeLists.txt  GamepadFactory.cpp  GamepadFactory.h  GenesisGamepad.cpp  GenesisGamepad.h  IGamepadFactory.h  InputDevice.h  MAMEGamepad.cpp  MAMEGamepad.h  NESGamepad.cpp  NESGamepad.h  NONEGamepad.cpp  NONEGamepad.h  SNESGamepad.cpp  SNESGamepad.h  SaturnGamepad.cpp  SaturnGamepad.h
src/controlblock/hal/: CMakeLists.txt  DigitalIO.cpp  DigitalIO.h  DigitalIn.cpp  DigitalIn.h  DigitalOut.cpp  DigitalOut.h  HALFactory.cpp  HALFactory.h  IDigitalIO.cpp  IDigitalIO.h  IDigitalIn.h  IDigitalOut.h  mcp23s17pi.cpp  mcp23s17pi.h
src/controlblock/uinput/: CMakeLists.txt  IUInputDevice.h  IUInputFactory.h  UInputDevice.cpp  UInputDevice.h  UInputEventCodes.h  UInputFactory.cpp  UInputFactory.h  UInputGamepadArcade.cpp  UInputGamepadArcade.h  UInputGamepadGenesis.cpp  UInputGamepadGenesis.h  UInputGamepadNES.cpp  UInputGamepadNES.h  UInputGamepadSNES.cpp  UInputGamepadSNES.h  UInputGamepadSaturn.cpp  UInputGamepadSaturn.h  UInputKeyboard.cpp  UInputKeyboard.h
src/demo/mcp23017cpp/: Makefile  mcp23017demo  testmcp23017.cpp
src/lib/mcp23s17/: CMakeLists.txt  mcp23s17.cpp  mcp23s17.h
src/lib/pispi/: CMakeLists.txt  pispi.cpp  pispi.h
supplementary/: ControlBlockLayout.idraw  controlblockconfig.cfg
test/: CMakeLists.txt  travis-ci.sh  wait-for-ssh.sh
test/controlblock/: sampletest.cpp
test/controlblock/app/: ControlBlockTest.cpp  PowerBlockTest.cpp  PowerSwitchTest.cpp
test/controlblock/config/: ControlBlockConfigurationMock.h  SingleConfigurationMock.h
test/controlblock/gamepads/: ArcadeGamepadTest.cpp  GamepadFactoryMock.h  GenesisGamepadTest.cpp  InputDeviceMock.h  MAMEGamepadTest.cpp  SNESGamepadTest.cpp
test/controlblock/hal/: DigitalInMock.h  DigitalOutMock.h
test/controlblock/uinput/: UInputDeviceMock.h  UInputFactoryMock.h
